<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Login strings -->
    <string name="app_name">SIAJ-Invenatarios</string>
    <string name="inventory_manager">Gestor de Inventarios</string>
    <string name="sign_in_subtitle">Inicia sesion en tu cuenta</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_email">Ingresa tu email</string>
    <string name="enter_password">Ingresa tu password</string>
    <string name="sign_in">Iniciar Sesion</string>
    <string name="logo_description">Logo</string>

    <!-- Inventory strings -->
    <string name="inventory">Inventario/Productos</string>
    <string name="search_items">Buscar productos…</string>
<!--    <string name="add_symbol">+</string>-->
<!--    <string name="view">View</string>-->
<!--    <string name="edit">Edit</string>-->

    <!-- Status strings -->
    <string name="in_stock">in stock</string>
    <string name="low_stock">low stock</string>
    <string name="out_of_stock">out of stock</string>

    <!-- Product info format -->
    <string name="sku_format">SKU: %s</string>
    <string name="supplier_format">Proveedor: %s</string>
    <string name="stock_format">Stock: %d</string>
    <string name="price_format">$%.2f</string>
</resources>